--- a/pop/onlineexaminationsystem.html
+++ b/pop/onlineexaminationsystem.html
@@ -57,13 +57,13 @@ text-align:center;
  <body>
  <nav>
  <div class="Gopal">
- <a href="C:\Users\ASUS\OneDrive\Desktop\online examination system\online examination system.html">HOME</a>;
- <a href="C:\Users\ASUS\OneDrive\Desktop\online examination system\examination rules.html">EXAMINATION INSTRUCTIONS</a>;
-<a href="C:\Users\ASUS\OneDrive\Desktop\online examination system\result.html">RESULT</a>;
- <a href="C:\Users\ASUS\OneDrive\Desktop\online examination system\ASSIGNMENTS.html">ONLINE ASSESSMENTS</a>;
- <a href="C:\Users\ASUS\OneDrive\Desktop\online examination system\Registration form.html">REGISTRATION</a>;
- <a href="C:\Users\ASUS\OneDrive\Desktop\online examination system\About us.html">ABOUT US</a>;
- <a href="C:\Users\ASUS\OneDrive\Desktop\online examination system\contact us.html">CONTACT US</a>;
+ <a href="online examination system.html">HOME</a>;
+ <a href="examinationrules.html">EXAMINATION INSTRUCTIONS</a>;
+<a href="result.html">RESULT</a>;
+ <a href="ASSIGNMENTS.html">ONLINE ASSESSMENTS</a>;
+ <a href="Registrationform.html">REGISTRATION</a>;
+ <a href="Aboutus.html">ABOUT US</a>;
+ <a href="contactus.html">CONTACT US</a>;
  </div>
  </nav>
  <div>
@@ -76,11 +76,11 @@ text-align:center;
 <p>Managing End-to-End Online Examination Process with Exam Management System</p>
 </div>
   <div>
- <center><button><a href="C:\Users\ASUS\OneDrive\Desktop\online examination system\Registration form.html">Click Here To Register</button></center>
+ <center><button><a href="Registration form.html">Click Here To Register</button></center>
  <br>
  <center><p>Or</p></center>
  <br>
-<center><button 2><a href="C:\Users\ASUS\OneDrive\Desktop\online examination system\login page.html">Login Here</button 2></center>
+<center><button 2><a href="login page.html">Login Here</button 2></center>
 </div>
  </body>
 </html>
