--- a/pop/onlineexaminationsystem.html
+++ b/pop/onlineexaminationsystem.html
@@ -57,7 +57,7 @@ text-align:center;
  <body>
  <nav>
  <div class="Gopal">
- <a href="online examination system.html">HOME</a>;
+ <a href="pop/online examination system.html">HOME</a>;
  <a href="examinationrules.html">EXAMINATION INSTRUCTIONS</a>;
 <a href="result.html">RESULT</a>;
  <a href="ASSIGNMENTS.html">ONLINE ASSESSMENTS</a>;
