--- a/pop/onlineexaminationsystem.html
+++ b/pop/onlineexaminationsystem.html
@@ -58,12 +58,12 @@ text-align:center;
  <nav>
  <div class="Gopal">
  <a href="pop/online examination system.html">HOME</a>;
- <a href="examinationrules.html">EXAMINATION INSTRUCTIONS</a>;
-<a href="result.html">RESULT</a>;
- <a href="ASSIGNMENTS.html">ONLINE ASSESSMENTS</a>;
- <a href="Registrationform.html">REGISTRATION</a>;
- <a href="Aboutus.html">ABOUT US</a>;
- <a href="contactus.html">CONTACT US</a>;
+ <a href="pop/examinationrules.html">EXAMINATION INSTRUCTIONS</a>;
+<a href="pop/result.html">RESULT</a>;
+ <a href="pop/ASSIGNMENTS.html">ONLINE ASSESSMENTS</a>;
+ <a href="pop/Registrationform.html">REGISTRATION</a>;
+ <a href="pop/Aboutus.html">ABOUT US</a>;
+ <a href="pop/contactus.html">CONTACT US</a>;
  </div>
  </nav>
  <div>
@@ -76,11 +76,11 @@ text-align:center;
 <p>Managing End-to-End Online Examination Process with Exam Management System</p>
 </div>
   <div>
- <center><button><a href="Registration form.html">Click Here To Register</button></center>
+ <center><button><a href="pop/Registration form.html">Click Here To Register</button></center>
  <br>
  <center><p>Or</p></center>
  <br>
-<center><button 2><a href="login page.html">Login Here</button 2></center>
+<center><button 2><a href="pop/login page.html">Login Here</button 2></center>
 </div>
  </body>
 </html>
