--- a/pop/onlineexaminationsystem.html
+++ b/pop/onlineexaminationsystem.html
@@ -76,11 +76,11 @@ text-align:center;
 <p>Managing End-to-End Online Examination Process with Exam Management System</p>
 </div>
   <div>
- <center><button><a href="pop/Registrationform.html">Click Here To Register</button></center>
+ <center><button><a href="pop/Registrationform.html">Click Here To Register</a></button></center>
  <br>
  <center><p>Or</p></center>
  <br>
-<center><button 2><a href="pop/loginpage.html">Login Here</button 2></center>
+<center><button 2><a href="pop/loginpage.html">Login Here</a></button 2></center>
 </div>
  </body>
 </html>
