--- a/pop/onlineexaminationsystem.html
+++ b/pop/onlineexaminationsystem.html
@@ -57,13 +57,13 @@ text-align:center;
  <body>
  <nav>
  <div class="Gopal">
- <a href="pop/online examination system.html">HOME</a>;
+ <a href="online examination system.html">HOME</a>;
  <a href="pop/examinationrules.html">EXAMINATION INSTRUCTIONS</a>;
 <a href="pop/result.html">RESULT</a>;
  <a href="pop/ASSIGNMENTS.html">ONLINE ASSESSMENTS</a>;
- <a href="pop/Registrationform.html">REGISTRATION</a>;
+ <a href="Registrationform.html">REGISTRATION</a>;
  <a href="pop/Aboutus.html">ABOUT US</a>;
- <a href="pop/contactus.html">CONTACT US</a>;
+ <a href="contactus.html">CONTACT US</a>;
  </div>
  </nav>
  <div>
