--- a/pop/onlineexaminationsystem.html
+++ b/pop/onlineexaminationsystem.html
@@ -58,11 +58,11 @@ text-align:center;
  <nav>
  <div class="Gopal">
  <a href="online examination system.html">HOME</a>;
- <a href="pop/examinationrules.html">EXAMINATION INSTRUCTIONS</a>;
-<a href="pop/result.html">RESULT</a>;
- <a href="pop/ASSIGNMENTS.html">ONLINE ASSESSMENTS</a>;
+ <a href="examinationrules.html">EXAMINATION INSTRUCTIONS</a>;
+<a href="result.html">RESULT</a>;
+ <a href="ASSIGNMENTS.html">ONLINE ASSESSMENTS</a>;
  <a href="Registrationform.html">REGISTRATION</a>;
- <a href="pop/Aboutus.html">ABOUT US</a>;
+ <a href="Aboutus.html">ABOUT US</a>;
  <a href="contactus.html">CONTACT US</a>;
  </div>
  </nav>
